--- a/public/css/index.css
+++ b/public/css/index.css
@@ -57,6 +57,9 @@ table {
 .mcenter{margin:0 17px;}
 .mcenter-data{margin:0 24.6px;}
 .fs60{font-size:60px !important;}
+.fs14{font-size: 14px;}
+
+
 
 .section{ width:90%;margin:20px auto 0 auto; }
 .item-button{ width:110px;height: 34px;line-height: 34px;background-color: #04425f;margin-bottom: 15px;margin-left: 1%;padding-left: 10px;border-radius: 1px;box-shadow: 0px 3px 3px #61d2f7;color:#25f3e6;}
@@ -66,27 +69,29 @@ table {
 .item-panel .item-panel-left .icon{font-size:65px;}
 .item-panel .item-panel-right{width:68%;display: inline-block;text-align: center;}
 
-.item-panel .item-panel-right p{ color:#fff;font-size:15px; }
-.item-panel .item-panel-right div{ font-size: 28px;font-weight: 600;margin-top:6px;}
+.item-panel .item-panel-right p{ color:#fff;font-size:15px;padding-bottom: 6px; }
+.item-panel .item-panel-right div{ font-size: 28px;font-weight: 600;}
 
 .color-yel{color:#ffff43;}
 .color-sky{color:#25f3e6;}
 .color-org{color:#ff4e4e;}
 
 .chart-data{margin-top:25px;}
-.data-model{width: 100%;height: 280px;display:inline-block;box-shadow: -10px 0px 15px #034c6a inset, /*å·¦è¾¹é˜´å½±*/
-0px -10px 15px #034c6a inset, /*ä¸Šè¾¹é˜´å½±*/10px 0px 15px #034c6a inset, /*å³è¾¹é˜´å½±*/
+.data-model{width: 100%;height: 280px;display:inline-block;box-shadow: -10px 0px 15px #034c6a inset, 0px -10px 15px #034c6a inset, 10px 0px 15px #034c6a inset, 
 0px 10px 15px #034c6a inset;border: 1px solid #034c6a;box-sizing: border-box; position: relative;}
 .model-left{width:32%;}
 .model-right{width:66%;}
-.data-model .model-title{background-color: #034c6a;border-radius: 18px;position: absolute;height: 30px;	width: 55%;top: -10px;color: #ffffff;
+.data-model .model-title{background-color: #034c6a;border-radius: 18px;position: absolute;height: 30px;	width: 55%;top: -15px;color: #ffffff;
 	font-size: 15px;left: 20%;line-height: 30px;text-align: center;}
 .data-model .model-title .icon{padding-right:3px;}
-.data-model .model-body{overflow: hidden;margin-top:25px;height:90%;}
-.data-model .model-body table{width: 100%;height: 100%;border-collapse: collapse;text-align: center;}
+.data-model .model-body{overflow: hidden;margin-top:15px;height:90%;}
+.data-model .model-body table{width: 100%;border-collapse: collapse;text-align: center;}
 .data-model .model-body table thead th{ color: #61d2f7;font-size: 14px;font-weight: 600; padding: 10px 0;}
 .data-model .model-body table tbody td{ color:#fff;padding:2%;}
 .data-model .model-body table tbody tr:nth-child(2n+1){background-color: #072951;box-shadow: -10px 0px 15px #034c6a inset, 10px 0px 15px #034c6a inset;}
 
+.text-tip{ color:#a9a1a1;position:absolute;font-size:10px;top: 150px;}
 
-
+.data-model .model-body table tbody .tr-ok td{color:#32cd32;}
+.data-model .model-body table tbody .tr-error td{color:#ff4e4e;}
+.echart-tips{ position: absolute;top: 35%;left:38%;font-size:18px;font-weight: 700;}
