--- a/public/css/index.css
+++ b/public/css/index.css
@@ -77,7 +77,7 @@ table {
 .color-org{color:#ff4e4e;}
 
 .chart-data{margin-top:25px;}
-.data-model{width: 100%;height: 280px;display:inline-block;box-shadow: -10px 0px 15px #034c6a inset, 0px -10px 15px #034c6a inset, 10px 0px 15px #034c6a inset, 
+.data-model{width: 100%;height: 300px;display:inline-block;box-shadow: -10px 0px 15px #034c6a inset, 0px -10px 15px #034c6a inset, 10px 0px 15px #034c6a inset, 
 0px 10px 15px #034c6a inset;border: 1px solid #034c6a;box-sizing: border-box; position: relative;}
 .model-left{width:32%;}
 .model-right{width:66%;}
@@ -88,11 +88,11 @@ table {
 .data-model .model-body table{border-collapse: collapse;text-align: center;width: 94%;margin: auto;}
 .data-model .model-body table thead th{ color: #61d2f7;font-size: 14px;font-weight: 600; padding: 10px 0;}
 .data-model .model-body table tbody td{ color:#fff;padding:2%;}
-/* .data-model .model-body table tbody tr:nth-child(2n+1){background-color: #072951;box-shadow: -10px 0px 15px #034c6a inset, 10px 0px 15px #034c6a inset;} */
-
+.data-model .model-body table tbody tr:nth-child(2n+1){background-color: #072951;box-shadow: -10px 0px 15px #034c6a inset, 10px 0px 15px #034c6a inset;}
+.tableid_{text-align: center;width: 94%;margin: auto;background-color: #034c6a;}
 .text-tip{ color:#a9a1a1;position:absolute;font-size:10px;top: 150px;}
 
 .data-model .model-body table tbody .tr-ok td{color:#32cd32;}
 .data-model .model-body table tbody .tr-error td{color:#ff4e4e;}
-.echart-tips{ position: absolute;top: 35%;left:38%;font-size:18px;font-weight: 700;}
+.echart-tips{ position: absolute;top: 38%;left:38%;font-size:18px;font-weight: 700;}
 .tableid_ thead tr td{opacity:0;}
