--- a/public/css/index.css
+++ b/public/css/index.css
@@ -109,12 +109,20 @@ table {
 
 /* 电视弹框 */
 .tv-alert{position:fixed;top:0;width:100%;height:100%;z-index:9999;background-color:#ffffff54;}
-.tv-mask{position: absolute;width: 300px;height: 100px;background-color: #fff;border-radius: 6px;top:-50px;left:-150px;margin-left: 50%;margin-top: -50px;text-align: center;}
+.tv-mask{position: absolute;width: 300px;height: 100px;background-color: #fff;border-radius: 6px;top:-50px;left:-150px;margin-left: 50%;margin-top: -50px;text-align: center;/*animation:msgmove 1s 1;
+	-webkit-animation:msgmove 1s 1;*/ /* Safari 和 Chrome */}
     
 .tv-mask strong{font-size: 25px;line-height: 100px;color:#b55f5a;}
 .tv-mask strong i{font-size: 35px;margin-right:6px;vertical-align: middle;}
 
-
+/* @keyframes msgmove{
+	0%   {top:0;}
+	10%  {top:10%;}
+	30%  {top:20%;}
+	50%  {top:30%;}
+	70%  {top:40%;}
+	100%  {top:50%;}
+} */
 
 
 
